Bug 50587 - FILEOPEN: LibreOffice 3.6 Alpha reports File I/O Error
Summary: FILEOPEN: LibreOffice 3.6 Alpha reports File I/O Error
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other Linux (All)
: high normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3
Keywords: regression
: 50911 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-01 07:12 UTC by Dave Richards
Modified: 2012-07-19 09:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
File that fails (12.46 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-01 07:12 UTC, Dave Richards
Details
Crash dialog (119.29 KB, image/png)
2012-06-01 07:13 UTC, Dave Richards
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Richards 2012-06-01 07:12:00 UTC
Created attachment 62375 [details]
File that fails

Our beta testers found a spreadsheet that won't open with 3.6 alpha.  I believe this is the May 30th build.

Spreadsheet is very simple with just a few columns.  Only have 64bit Linux for testing.
Comment 1 Dave Richards 2012-06-01 07:13:09 UTC
Created attachment 62376 [details]
Crash dialog
Comment 2 Eike Rathke (retired, only occasionally showing up) 2012-06-01 07:51:21 UTC
Somewhere down below SvXMLImport::endElement() (called from SaxExpatParser_Impl::callbackEndElement()) an instance of 'com::sun::star::beans::UnknownPropertyException' is thrown.
Comment 3 Dave Richards 2012-06-22 05:55:16 UTC
Confirmed still broken in beta 2.
Comment 4 Markus Mohrhard 2012-06-24 19:34:05 UTC
Exception is thrown by ScEditFieldObj::setPropertyValue

Seems to be related to Kohei's rework.
Comment 5 Markus Mohrhard 2012-06-24 19:44:38 UTC
@Kohei: Could you have a look at this one? I also see it with the test document from fdo#51100. Seems to be that you're missing a valid property in your switch statement.
Comment 6 Kohei Yoshida 2012-06-29 16:52:42 UTC
I'll take a look at this.
Comment 7 Kohei Yoshida 2012-07-02 06:54:16 UTC
I know how the error occurs, but still struggling to see why it happens.  Still looking deeper.  This will be a long battle.
Comment 8 Not Assigned 2012-07-02 08:39:22 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dcf586ff817af73270899f233b26525306120a0c

fdo#50587: Remove totally mis-placed 'static' keyword.
Comment 9 Kohei Yoshida 2012-07-02 08:45:30 UTC
Mystery solved.  It was caused by a simple human error (of misplacing a keyword that doesn't belong).
Comment 10 Not Assigned 2012-07-02 08:45:36 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1658c64e0e088d6fddd4fc3416a80e0a952f516&g=libreoffice-3-6

fdo#50587: Remove totally mis-placed 'static' keyword.


It will be available in LibreOffice 3.6.
Comment 11 Kohei Yoshida 2012-07-06 19:06:16 UTC
*** Bug 50911 has been marked as a duplicate of this bug. ***
Comment 12 Rainer Bielefeld Retired 2012-07-19 09:56:30 UTC
<http://wiki.documentfoundation.org/BugReport_Details#Version>