fdo#50587: Remove totally mis-placed 'static' keyword.

How in the world did that end up there!?

Change-Id: If276afcea2b0c2d0fe2a59ac966f245608d0e64d